<package>
  <name>behaviortree_ros</name>
  <version>0.0.2</version>
  <description>
  This package provides tutorials and useful utilities on top of BehaviorTree.CPP v4.
  </description>

  <maintainer email="luc001@e.ntu.edu.sg">Tien Luc Vu</maintainer>

  <license>MIT</license>

  <author>Davide Faconti</author>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behaviortree_cpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <build_depend>yolo_object_detection</build_depend>
  <run_depend>yolo_object_detection</run_depend>

  <build_depend>common_msg_srv</build_depend>
  <run_depend>common_msg_srv</run_depend>
 
  <!-- <build_depend>object_deposition</build_depend>
  <run_depend>object_deposition</run_depend> -->

  <build_depend>common_action_service_servers</build_depend>
  <run_depend>common_action_service_servers</run_depend>

  <build_depend>pixhawk</build_depend>
  <run_depend>pixhawk</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
